[project]
name = "gen-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.6",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-mistralai>=1.1.5",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tiktoken>=0.13.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "transformers>=5.12.1",
    "langchain-chroma",
    "streamlit",
    "pypdf",
]
